--- a/Numero_Mayor/Numero_Mayor.cbp
+++ b/Numero_Mayor/Numero_Mayor.cbp
@@ -34,6 +34,7 @@
 			<Add option="-pedantic" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
